// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponsList should display new coupon modal when clicking add coupon 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <p
    class="a11y-speak-intro-text"
    hidden="hidden"
    id="a11y-speak-intro-text"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-assertive"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-polite"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-hidden="true"
    id="wpcom"
  />
  <div>
    <div
      class="memberships__products-list"
    >
      <div
        class="card section-header is-compact"
      >
        <div
          class="section-header__label"
        >
          <span
            class="section-header__label-text"
          >
            Manage coupons
          </span>
        </div>
        <div
          class="section-header__actions"
        >
          <button
            class="button is-compact is-primary"
            type="button"
          >
            Add a new coupon
          </button>
        </div>
      </div>
      <div
        class="card memberships__products-product-card is-compact"
      >
        <div
          class="memberships__products-product-details"
        >
          <div
            class="memberships__products-product-title"
          >
            COUPON1
          </div>
          <sub
            class="memberships__products-product-amount"
          />
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info"
            >
              Expires on %s
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--warning-clear"
            >
              %s off forever
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info-purple"
            >
              Limited to specific emails
            </div>
          </div>
        </div>
        <span
          class="ellipsis-menu"
        >
          <button
            class="button ellipsis-menu__toggle is-borderless"
            title="Toggle menu"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="gridicons.svg#gridicons-ellipsis"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="card memberships__products-product-card is-compact"
      >
        <div
          class="memberships__products-product-details"
        >
          <div
            class="memberships__products-product-title"
          >
            COUPON2
          </div>
          <sub
            class="memberships__products-product-amount"
          />
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info"
            >
              Expires on %s
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--warning-clear"
            >
              %s off forever
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info-purple"
            >
              Limited to specific emails
            </div>
          </div>
        </div>
        <span
          class="ellipsis-menu"
        >
          <button
            class="button ellipsis-menu__toggle is-borderless"
            title="Toggle menu"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="gridicons.svg#gridicons-ellipsis"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="card memberships__products-product-card is-compact"
      >
        <div
          class="memberships__products-product-details"
        >
          <div
            class="memberships__products-product-title"
          >
            COUPON3
          </div>
          <sub
            class="memberships__products-product-amount"
          />
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info"
            >
              Expires on %s
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--warning-clear"
            >
              %s off for 3 months
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info-blue"
            >
              Cannot be combined with other coupons
            </div>
          </div>
          <div
            class="memberships__coupons-coupon-badge"
          >
            <div
              class="badge badge--info-green"
            >
              First-time order only
            </div>
          </div>
        </div>
        <span
          class="ellipsis-menu"
        >
          <button
            class="button ellipsis-menu__toggle is-borderless"
            title="Toggle menu"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="gridicons.svg#gridicons-ellipsis"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay dialog__backdrop is-full-screen"
    >
      <div
        aria-label=""
        aria-modal="true"
        class="ReactModal__Content dialog card"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="dialog__content"
          tabindex="-1"
        >
          <h3
            class="form-section-heading"
          >
            Add new coupon
          </h3>
          <div
            class="memberships__dialog-sections"
          >
            <fieldset
              class="memberships__dialog-sections-coupon-code form-fieldset"
              role="group"
            >
              <label
                class="form-label"
                for="coupon_code"
              >
                Coupon code
              </label>
              <div
                class="form-text-input-with-value-generation is-error"
                role="group"
              >
                <input
                  aria-label="enter value"
                  class="form-text-input form-text-input-with-value-generation__input"
                  id="coupon_code"
                  maxlength="10"
                  type="text"
                  value=""
                />
                <button
                  aria-label="generate value"
                  class="components-button form-text-input-with-value-generation__button is-compact"
                  type="button"
                >
                  Random
                </button>
              </div>
              <p
                class="form-setting-explanation"
              >
                Choose a unique coupon code for the discount. Not case-sensitive.
              </p>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-discount-info form-fieldset"
              role="group"
            >
              <div
                class="memberships__dialog-sections-discount-info-field-container"
              >
                <label
                  class="form-label"
                  for="discount_type"
                >
                  Discount type
                </label>
                <select
                  class="form-select"
                  id="discount_type"
                >
                  <option
                    value="percentage"
                  >
                    Percentage
                  </option>
                  <option
                    value="amount"
                  >
                    Amount
                  </option>
                </select>
              </div>
              <div
                class="memberships__dialog-sections-discount-info-field-container"
              >
                <label
                  class="form-label"
                  for="discount_amount"
                >
                  Amount
                </label>
                <div
                  class="form-text-input-with-affixes"
                >
                  <input
                    class="form-text-input"
                    id="discount_amount"
                    name="discount_percentage"
                    type="text"
                    value=""
                  />
                  <span
                    class="form-text-input-with-affixes__suffix"
                  >
                    %
                  </span>
                </div>
              </div>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-date form-fieldset"
              role="group"
            >
              <div
                class="memberships__dialog-sections-date-field-container"
              >
                <label
                  class="form-label"
                  for="start_date"
                >
                  Start date
                </label>
                <input
                  class="form-text-input"
                  id="start_date"
                  type="date"
                  value="2023-6-23"
                />
              </div>
              <div
                class="memberships__dialog-sections-date-field-container"
              >
                <label
                  class="form-label"
                  for="amount"
                >
                  Expiration date (optional)
                </label>
                <input
                  class="form-text-input"
                  id="end_date"
                  type="date"
                  value=""
                />
              </div>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-products form-fieldset"
              role="group"
            >
              <label
                class="form-label"
                for="coupon_code"
              >
                Products
              </label>
              <div
                class="components-dropdown components-dropdown-menu"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Any product"
                  class="components-button components-dropdown-menu__toggle has-icon"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                    />
                  </svg>
                  Any product
                </button>
              </div>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-usage-limit form-fieldset"
              role="group"
            >
              <label
                class="form-label"
                for="coupon_code"
              >
                Usage limit (optional)
              </label>
              <div
                class="form-text-input-with-affixes"
              >
                <input
                  class="form-text-input"
                  id="limit_per_user"
                  type="text"
                  value="∞"
                />
                <span
                  class="form-text-input-with-affixes__suffix"
                >
                  times
                </span>
              </div>
              <p
                class="form-setting-explanation"
              >
                Limit the number of times this coupon can be redeemed by a supporter.
              </p>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-coupon-boolean form-fieldset"
              role="group"
            >
              <div
                class="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
              >
                <div
                  class="components-base-control__field css-yj91it-StyledField ej5x27r3"
                >
                  <div
                    class="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
                    data-wp-c16t="true"
                    data-wp-component="HStack"
                  >
                    <span
                      class="components-form-toggle"
                    >
                      <input
                        class="components-form-toggle__input"
                        id="inspector-toggle-control-0"
                        type="checkbox"
                      />
                      <span
                        class="components-form-toggle__track"
                      />
                      <span
                        class="components-form-toggle__thumb"
                      />
                    </span>
                    <label
                      class="components-flex-item components-flex-block components-toggle-control__label css-14wzr73-View-Item-sx-Base-block e19lxcc00"
                      data-wp-c16t="true"
                      data-wp-component="FlexBlock"
                      for="inspector-toggle-control-0"
                    >
                      Cannot be combined with other coupons
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-coupon-boolean form-fieldset"
              role="group"
            >
              <div
                class="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
              >
                <div
                  class="components-base-control__field css-yj91it-StyledField ej5x27r3"
                >
                  <div
                    class="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
                    data-wp-c16t="true"
                    data-wp-component="HStack"
                  >
                    <span
                      class="components-form-toggle"
                    >
                      <input
                        class="components-form-toggle__input"
                        id="inspector-toggle-control-1"
                        type="checkbox"
                      />
                      <span
                        class="components-form-toggle__track"
                      />
                      <span
                        class="components-form-toggle__thumb"
                      />
                    </span>
                    <label
                      class="components-flex-item components-flex-block components-toggle-control__label css-14wzr73-View-Item-sx-Base-block e19lxcc00"
                      data-wp-c16t="true"
                      data-wp-component="FlexBlock"
                      for="inspector-toggle-control-1"
                    >
                      Eligible for first-time order only
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-duration form-fieldset"
              role="group"
            >
              <div
                class="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
              >
                <div
                  class="components-base-control__field css-yj91it-StyledField ej5x27r3"
                >
                  <div
                    class="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
                    data-wp-c16t="true"
                    data-wp-component="HStack"
                  >
                    <span
                      class="components-form-toggle"
                    >
                      <input
                        class="components-form-toggle__input"
                        id="inspector-toggle-control-2"
                        type="checkbox"
                      />
                      <span
                        class="components-form-toggle__track"
                      />
                      <span
                        class="components-form-toggle__thumb"
                      />
                    </span>
                    <label
                      class="components-flex-item components-flex-block components-toggle-control__label css-14wzr73-View-Item-sx-Base-block e19lxcc00"
                      data-wp-c16t="true"
                      data-wp-component="FlexBlock"
                      for="inspector-toggle-control-2"
                    >
                      Duration
                    </label>
                  </div>
                </div>
              </div>
              <select
                aria-label="duration selection"
                class="form-select"
                disabled=""
                id="duration"
              >
                <option
                  value=""
                >
                  Forever
                </option>
                <option
                  value="1 months"
                >
                  1 Month
                </option>
                <option
                  value="3 months"
                >
                  3 Months
                </option>
                <option
                  value="6 months"
                >
                  6 Months
                </option>
                <option
                  value="12 months"
                >
                  1 Year
                </option>
              </select>
              <p
                class="form-setting-explanation"
              >
                Once the coupon is used for a subscription, how long does it last?
              </p>
            </fieldset>
            <fieldset
              class="memberships__dialog-sections-specific-emails form-fieldset"
              role="group"
            >
              <div
                class="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
              >
                <div
                  class="components-base-control__field css-yj91it-StyledField ej5x27r3"
                >
                  <div
                    class="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
                    data-wp-c16t="true"
                    data-wp-component="HStack"
                  >
                    <span
                      class="components-form-toggle"
                    >
                      <input
                        class="components-form-toggle__input"
                        id="inspector-toggle-control-3"
                        type="checkbox"
                      />
                      <span
                        class="components-form-toggle__track"
                      />
                      <span
                        class="components-form-toggle__thumb"
                      />
                    </span>
                    <label
                      class="components-flex-item components-flex-block components-toggle-control__label css-14wzr73-View-Item-sx-Base-block e19lxcc00"
                      data-wp-c16t="true"
                      data-wp-component="FlexBlock"
                      for="inspector-toggle-control-3"
                    >
                      Limit coupon to specific emails
                    </label>
                  </div>
                </div>
              </div>
              <input
                aria-label="limit coupon to specific emails text input"
                class="form-text-input"
                disabled=""
                id="email_allow_list"
                type="text"
                value=""
              />
              <p
                class="form-setting-explanation"
              >
                Separate email addresses with commas. Use an asterisk (*) to match parts of an email. For example, "*@university.edu" would select all "university.edu" addresses.
              </p>
            </fieldset>
          </div>
        </div>
        <div
          class="dialog__action-buttons"
        >
          <button
            class="button"
            data-e2e-button="cancel"
            data-tip-target="dialog-base-action-cancel"
            type="button"
          >
            <span
              class="dialog__button-label"
            >
              Cancel
            </span>
          </button>
          <button
            class="button is-primary"
            data-e2e-button="submit"
            data-tip-target="dialog-base-action-submit"
            disabled=""
            type="button"
          >
            <span
              class="dialog__button-label"
            >
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CouponsList should render a list with coupons when present for site 1`] = `
<div>
  <div
    class="memberships__products-list"
  >
    <div
      class="card section-header is-compact"
    >
      <div
        class="section-header__label"
      >
        <span
          class="section-header__label-text"
        >
          Manage coupons
        </span>
      </div>
      <div
        class="section-header__actions"
      >
        <button
          class="button is-compact is-primary"
          type="button"
        >
          Add a new coupon
        </button>
      </div>
    </div>
    <div
      class="card memberships__products-product-card is-compact"
    >
      <div
        class="memberships__products-product-details"
      >
        <div
          class="memberships__products-product-title"
        >
          COUPON1
        </div>
        <sub
          class="memberships__products-product-amount"
        />
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info"
          >
            Expires on %s
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--warning-clear"
          >
            %s off forever
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info-purple"
          >
            Limited to specific emails
          </div>
        </div>
      </div>
      <span
        class="ellipsis-menu"
      >
        <button
          class="button ellipsis-menu__toggle is-borderless"
          title="Toggle menu"
          type="button"
        >
          <svg
            class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-ellipsis"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="card memberships__products-product-card is-compact"
    >
      <div
        class="memberships__products-product-details"
      >
        <div
          class="memberships__products-product-title"
        >
          COUPON2
        </div>
        <sub
          class="memberships__products-product-amount"
        />
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info"
          >
            Expires on %s
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--warning-clear"
          >
            %s off forever
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info-purple"
          >
            Limited to specific emails
          </div>
        </div>
      </div>
      <span
        class="ellipsis-menu"
      >
        <button
          class="button ellipsis-menu__toggle is-borderless"
          title="Toggle menu"
          type="button"
        >
          <svg
            class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-ellipsis"
            />
          </svg>
        </button>
      </span>
    </div>
    <div
      class="card memberships__products-product-card is-compact"
    >
      <div
        class="memberships__products-product-details"
      >
        <div
          class="memberships__products-product-title"
        >
          COUPON3
        </div>
        <sub
          class="memberships__products-product-amount"
        />
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info"
          >
            Expires on %s
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--warning-clear"
          >
            %s off for 3 months
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info-blue"
          >
            Cannot be combined with other coupons
          </div>
        </div>
        <div
          class="memberships__coupons-coupon-badge"
        >
          <div
            class="badge badge--info-green"
          >
            First-time order only
          </div>
        </div>
      </div>
      <span
        class="ellipsis-menu"
      >
        <button
          class="button ellipsis-menu__toggle is-borderless"
          title="Toggle menu"
          type="button"
        >
          <svg
            class="gridicon gridicons-ellipsis ellipsis-menu__toggle-icon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="gridicons.svg#gridicons-ellipsis"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`CouponsList should render nothing when feature is disabled 1`] = `<div />`;

exports[`CouponsList should render with an empty list when no coupons are provided 1`] = `
<div>
  <div
    class="memberships__products-list"
  >
    <div
      class="card section-header is-compact"
    >
      <div
        class="section-header__label"
      >
        <span
          class="section-header__label-text"
        >
          Manage coupons
        </span>
      </div>
      <div
        class="section-header__actions"
      >
        <button
          class="button is-compact is-primary"
          type="button"
        >
          Add a new coupon
        </button>
      </div>
    </div>
  </div>
</div>
`;
